// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders hover content on load for 3000 1`] = `
.c0 {
  position: relative;
  display: inline-block;
  padding: 0.5rem 0;
  font-size: 0.75rem;
}

.c0 span {
  visibility: visible;
  width: 120px;
  background-color: black;
  color: #fff;
  text-align: center;
  padding: 0.5rem;
  border-radius: 6px;
  top: 100%;
  left: 50%;
  margin-left: -60px;
  position: absolute;
  z-index: 1;
}

.c0:hover span {
  visibility: visible;
}

.c0 span::after {
  content: ' ';
  position: absolute;
  bottom: 100%;
  left: 50%;
  margin-left: -12px;
  border-width: 5px;
  border-style: solid;
  border-color: transparent transparent black transparent;
}

<div>
  <div
    class="c0"
  >
    Hover Me
    <span>
      You are hovering me
    </span>
  </div>
</div>
`;

exports[`renders tooltip normally 1`] = `
.c0 {
  position: relative;
  display: inline-block;
  padding: 0.5rem 0;
  font-size: 0.75rem;
}

.c0 span {
  visibility: hidden;
  width: 120px;
  background-color: black;
  color: #fff;
  text-align: center;
  padding: 0.5rem;
  border-radius: 6px;
  top: 100%;
  left: 50%;
  margin-left: -60px;
  position: absolute;
  z-index: 1;
}

.c0:hover span {
  visibility: visible;
}

.c0 span::after {
  content: ' ';
  position: absolute;
  bottom: 100%;
  left: 50%;
  margin-left: -12px;
  border-width: 5px;
  border-style: solid;
  border-color: transparent transparent black transparent;
}

<div>
  <div
    class="c0"
  >
    Hover Me
    <span>
      You are hovering me
    </span>
  </div>
</div>
`;
